Nicolas_Tafur/log/build_2025-09-03_05-52-26/robot/stdout_stderr.log
running egg_info
writing ../build/robot/robot.egg-info/PKG-INFO
writing dependency_links to ../build/robot/robot.egg-info/dependency_links.txt
writing entry points to ../build/robot/robot.egg-info/entry_points.txt
writing requirements to ../build/robot/robot.egg-info/requires.txt
writing top-level names to ../build/robot/robot.egg-info/top_level.txt
reading manifest file '../build/robot/robot.egg-info/SOURCES.txt'
writing manifest file '../build/robot/robot.egg-info/SOURCES.txt'
running build
running build_py
copying robot/pinterfaz.py -> /home/tombe/Robotica/Robotica-UAO-2025-3/Nicolas_Tafur/build/robot/build/lib/robot
running install
running install_lib
copying /home/tombe/Robotica/Robotica-UAO-2025-3/Nicolas_Tafur/build/robot/build/lib/robot/pinterfaz.py -> /home/tombe/Robotica/Robotica-UAO-2025-3/Nicolas_Tafur/install/robot/lib/python3.10/site-packages/robot
byte-compiling /home/tombe/Robotica/Robotica-UAO-2025-3/Nicolas_Tafur/install/robot/lib/python3.10/site-packages/robot/pinterfaz.py to pinterfaz.cpython-310.pyc
running install_data
running install_egg_info
removing '/home/tombe/Robotica/Robotica-UAO-2025-3/Nicolas_Tafur/install/robot/lib/python3.10/site-packages/robot-0.0.1-py3.10.egg-info' (and everything under it)
  File "/home/tombe/Robotica/Robotica-UAO-2025-3/Nicolas_Tafur/install/robot/lib/python3.10/site-packages/robot/pinterfaz.py", line 484
    self._send_gripper_loop(dire90)ction)
                                        ^
SyntaxError: unmatched ')'

Copying ../build/robot/robot.egg-info to /home/tombe/Robotica/Robotica-UAO-2025-3/Nicolas_Tafur/install/robot/lib/python3.10/site-packages/robot-0.0.1-py3.10.egg-info
running install_scripts
Installing fk_marker script to /home/tombe/Robotica/Robotica-UAO-2025-3/Nicolas_Tafur/install/robot/lib/robot
Installing joint_commander_deg script to /home/tombe/Robotica/Robotica-UAO-2025-3/Nicolas_Tafur/install/robot/lib/robot
Installing pinterfaz script to /home/tombe/Robotica/Robotica-UAO-2025-3/Nicolas_Tafur/install/robot/lib/robot
Installing serial_node script to /home/tombe/Robotica/Robotica-UAO-2025-3/Nicolas_Tafur/install/robot/lib/robot
writing list of installed files to '/home/tombe/Robotica/Robotica-UAO-2025-3/Nicolas_Tafur/build/robot/install.log'
